2003-09-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added libgnomesu.

2003-09-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-media has been branched.

2003-09-17  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Fixed gtkhtml branch, gal branch.

2003-09-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-panel and gnome-applets have
	been branched.

2003-09-15  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added webeyes.

2003-09-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gedit has been branched.

2003-09-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added hardware-monitor and
	monster-masher.

2003-09-13  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gconf-editor has been branched.

2003-09-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-vfs, eel, and nautilus have
	been branched.

2003-09-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-mime-data has been branched.

2003-09-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: ghex has been branched.

2003-09-09  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-themes has been branched.

2003-09-08  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-control-center has been branched.
	glimmer is back on HEAD.

2003-09-08  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-utils has been branched.

2003-09-08  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fix balsa branch.

2003-09-05  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added the gdesklets-extras module.

2003-09-04  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added the gdesklets module.

2003-09-02  Christian Rose  <menthos@menthos.com>
