@@ -230,6 +230,17 @@
       </component>
     </version>
   </module>
+  <module name="conglomerate">
+    <version release="gnome-2.4">
+      <component name="conglomerate" dir="conglomerate" group="extras">
+       <podir dir="po"/>
+       <potname name="conglomerate.pot"/>
+       <branch name="HEAD"/>
+       <regenerate/>
+       <download/>
+      </component>
+    </version>
+  </module>
   <module name="devhelp">
     <version release="gnome-2.4">
       <component name="devhelp" dir="devhelp" group="extras">
