@@ -1,5 +1,9 @@
 2003-09-20  Christian Rose  <menthos@menthos.com>
 
+	* translation-status.xml: Added conglomerate.
+
+2003-09-20  Christian Rose  <menthos@menthos.com>
+
 	* translation-status.xml: Added libgnomesu.
 
 2003-09-18  Christian Rose  <menthos@menthos.com>
